Some tweaks to get everything to work.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code" nonce="AcLMiHX9qVjLQlC_6QLV0Q" rel="stylesheet">
-    <link href="/pacman/halloween/static/index.min.css?cachebust=6d20b3b" nonce="AcLMiHX9qVjLQlC_6QLV0Q" rel="stylesheet">
-    <script defer nonce="AcLMiHX9qVjLQlC_6QLV0Q" src="/pacman/halloween/static/index.min.js?cachebust=c9c157a"></script>
-    <link href="/pacman/halloween/static/favicon/favicon.ico" rel="icon" sizes="any">
-    <link href="/pacman/halloween/static/favicon/favicon.svg" rel="icon" type="image/svg+xml">
-    <link href="/pacman/halloween/static/favicon/apple-touch-icon-180x180.png" rel="apple-touch-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code" nonce="" rel="stylesheet">
+    <link href="index.min.css" nonce="" rel="stylesheet">
+    <script defer nonce="" src="index.min.js"></script>
+    <link href="favicon.ico" rel="icon" sizes="any">
+    <link href="favicon.svg" rel="icon" type="image/svg+xml">
+    <link href="apple-touch-icon-180x180.png" rel="apple-touch-icon">
     <link href="https://searchplayground.google/intl/en/pacman/halloween/" rel="canonical">
     <meta content="initial-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover"
         name="viewport">
@@ -22,7 +22,7 @@
         content="PAC-MAN: Halloween 2025 Edition"
         property="og:title">
     <meta
-        content="https://searchplayground.google/pacman/halloween/static/share/share.png"
+        content="share.png"
         property="og:image">
     <meta
         content="600"
@@ -44,7 +44,7 @@
         name="twitter:title">
     <meta content="Today's interactive Doodle features a special Halloween edition of PAC-MAN, celebrating 45 years of this classic game. Click to play!"
         name="twitter:description">
-    <meta content="https://searchplayground.google/pacman/halloween/static/share/share.png"
+    <meta content="share.png"
         name="twitter:image">
     <title>PAC-MAN: Halloween 2025 Edition</title>
 </head>
